@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}

' ── Anchors from previous sprints (compacted) ──
class User <<Sprint 1>> {
  +id : UUID
  +email : String <<unique>>
}

class Project <<Sprint 2>> {
  +id : UUID
  +businessUnit : BusinessUnit
}

class Task <<Sprint 3>> {
  +id : UUID
  +key : String
}

class Milestone <<Sprint 3>> {
  +id : UUID
  +dueDate : DateTime
}

class TaskTimeEntry <<Sprint 3>> {
  +id : UUID
  +hours : Float
}

' ── Sprint 4 — Personal To-Dos ──
package "Personal To-Dos (Sprint 4)" {
  class UserTask #LightYellow {
    +id : UUID
    +status : UserTaskStatus
    +priority : UserTaskPriority
    +dueDate : DateTime
    +reminderDate : DateTime
    +notified : Boolean
    +displayOrder : Integer
  }
  class UserTaskContent #LightYellow {
    +title : String
    +language : Language
  }
  class UserTaskComment #LightYellow {
    +comment : String
  }
  class UserTaskAttachment #LightYellow {
    +file : String
  }
}

' ── Sprint 4 — Time & Attendance ──
package "Time & Attendance (Sprint 4)" {
  class WorkDay #LightYellow {
    +id : UUID
    +dailyMood : Integer
    +createdAt : DateTime «business-day key»
  }
  class WorkSession #LightYellow {
    +startTime : DateTime
    +endTime : DateTime
    +timeSpentInMinutes : Decimal
    +location : WorkSessionLocation
    +device : WorkSessionDevice
  }
}

' ── Sprint 4 — Events & Calendar ──
package "Events & Calendar (Sprint 4)" {
  class Event #LightYellow {
    +id : UUID
    +type : EventType
    +startTime : DateTime
    +nextNotificationTime : DateTime
    +isNotified : Boolean
    +toAllUsers : Boolean
  }
  class EventContent #LightYellow {
    +title : String
    +language : Language
  }
  class EventParticipant #LightYellow {
    +eventId : UUID <<PK>>
    +userId : UUID <<PK>>
  }
}

' ── Sprint 4 — Reminders ──
package "Reminders (Sprint 4)" {
  class Reminder #LightYellow {
    +id : UUID
    +entityType : ReminderEntityType
    +entityId : UUID
    +reminderAt : DateTime
    +status : ReminderStatus
    +isRecurring : Boolean
  }
  class ReminderChannel #LightYellow {
    +channel : ChannelType
  }
}

' ── Relations from the anchors into Sprint 4 ──
User "1" --> "0..*" UserTask : owns
User "1" --> "0..*" WorkDay : has
User "1" --> "0..*" Event : creates
User "1" --> "0..*" Reminder : "recipient / author"

Project "1" --> "0..*" Reminder : "projectId?"
Task "0..1" ..> "0..*" Reminder : "entityId?"
Milestone "0..1" ..> "0..*" Reminder : "entityId?"

' ── Sprint 4 internal relations ──
UserTask "1" --> "0..*" UserTask : sub-tasks
UserTask "1" --> "1..*" UserTaskContent : content
UserTask "1" --> "0..*" UserTaskComment : comments
UserTask "1" --> "0..*" UserTaskAttachment : attachments

WorkDay "1" --> "0..*" WorkSession : has
WorkSession "1" --> "0..*" TaskTimeEntry : "anchors (Sprint 3)"

Event "1" --> "1..*" EventContent : content
Event "1" --> "0..*" EventParticipant : participants

Reminder "1" --> "1..*" ReminderChannel : channels
@enduml
